# GuardLLM

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  conftest.py  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: __init__.py  deps.py  main.py  models.py
api/routes/: check.py  monitor.py
benchmarks/: __init__.py  generate_datasets.py  hallucination_tests.json  injection_tests.json  jailbreak_tests.json  pii_tests_tr.json  results.json  run_benchmarks.py
configs/: default_config.yaml
dashboard/: .env.example  README.md  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  demoData.ts  styles.css  types.ts
dashboard/src/components/: AlertBanner.tsx  EventsTable.tsx  PieChart.tsx  StatCards.tsx  ThreatChart.tsx
dashboard/src/pages/: LogViewer.tsx  Playground.tsx  Settings.tsx  ThreatMonitor.tsx
docs/: benchmarks.md  configuration.md  detectors.md  index.md  integrations.md  kvkk.md  monitoring.md  quickstart.md  usage.md
examples/: basic_usage.py  fastapi_example.py  kvkk_example.py  langchain_example.py  monitor_example.py
guardllm/: __init__.py  config.py  exceptions.py  guard.py  result.py
guardllm/compliance/: __init__.py  kvkk.py
guardllm/input/: __init__.py  injection.py  jailbreak.py  pii_scanner.py  topic_restrictor.py
guardllm/integrations/: __init__.py  fastapi_middleware.py  langchain_guard.py  openai_guard.py
guardllm/monitor/: __init__.py  alerts.py  event.py  logger.py  metrics.py  monitor.py
guardllm/output/: __init__.py  hallucination.py  toxicity.py
guardllm/utils/: __init__.py  patterns.py
tests/: test_api.py  test_benchmarks.py  test_config.py  test_guard_output.py  test_hallucination.py  test_injection.py  test_jailbreak.py  test_kvkk.py  test_langchain.py  test_middleware.py  test_monitor.py  test_openai_guard.py  test_pii.py  test_topic.py  test_toxicity.py
